# furia-sdk-examples

./: .clippy.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cuas/hello-airspace/: Cargo.toml
cuas/hello-airspace/src/: main.rs
cuas/hello-engagement/: Cargo.toml
cuas/hello-engagement/src/: main.rs
cuas/hello-interceptor-pairing/: Cargo.toml
cuas/hello-interceptor-pairing/src/: main.rs
cuas/hello-kill-chain/: Cargo.toml
cuas/hello-kill-chain/src/: main.rs
cuas/hello-threat-scorer/: Cargo.toml
cuas/hello-threat-scorer/src/: main.rs
docs/: architecture.md  examples.md  index.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-07-06-hierarchical-examples-structure.md
docs/superpowers/specs/: 2026-07-06-hierarchical-examples-structure-design.md
entities/hello-bso/src/: main.rs
entities/hello-civilian/: Cargo.toml
entities/hello-platform/: Cargo.toml  README.md
entities/hello-platform/src/: main.rs
governance/hello-decision-tree/: README.md
governance/hello-policy/: Cargo.toml  README.md
hello-acoustic/: Cargo.toml
hello-acoustic/src/: main.rs
hello-assessment/: Cargo.toml
hello-assessment/src/: main.rs
hello-bso/: Cargo.toml
hello-cbrn/: Cargo.toml
hello-cbrn/src/: main.rs
hello-civilian/: Cargo.toml  README.md
hello-civilian/src/: main.rs
hello-decision-tree/: Cargo.toml
hello-decision-tree/src/: main.rs
hello-decomposition/: Cargo.toml  README.md
hello-decomposition/src/: main.rs
hello-dispatch/: Cargo.toml  README.md
hello-dispatch/src/: main.rs
hello-ew/: Cargo.toml  README.md
hello-ew/src/: main.rs
hello-export/: Cargo.toml
hello-export/src/: main.rs
hello-fusion/: Cargo.toml
hello-fusion/src/: main.rs
hello-intent/: Cargo.toml
hello-intent/src/: main.rs
hello-logistics/: Cargo.toml
hello-logistics/src/: main.rs
hello-nato-coalition/: Cargo.toml  README.md
hello-nato-coalition/src/: main.rs
hello-platform/: Cargo.toml
hello-platform/src/: main.rs
hello-policy/: Cargo.toml
hello-policy/src/: main.rs
hello-sensor/: Cargo.toml
hello-sensor/src/: main.rs
hello-simulation/: Cargo.toml
hello-simulation/src/: main.rs
hello-terrain/: Cargo.toml  README.md
hello-terrain/src/: main.rs
hello-ui/: Cargo.toml  README.md
hello-ui/src/: main.rs
integrations/hello-export/: Cargo.toml  README.md
integrations/hello-export/src/: main.rs
integrations/hello-nato-coalition/: Cargo.toml
integrations/hello-nato-coalition/src/: main.rs
integrations/hello-ui/: Cargo.toml
intelligence/hello-assessment/: README.md
intelligence/hello-assessment/src/: main.rs
intelligence/hello-decomposition/: Cargo.toml
intelligence/hello-decomposition/src/: main.rs
intelligence/hello-fusion/: Cargo.toml  README.md
intelligence/hello-intent/: Cargo.toml  README.md
intelligence/hello-intent/src/: main.rs
operations/hello-dispatch/: Cargo.toml
operations/hello-dispatch/src/: main.rs
operations/hello-logistics/: Cargo.toml  README.md
operations/hello-simulation/: Cargo.toml  README.md
operations/hello-simulation/src/: main.rs
scripts/: generate-docs.sh
sensors/hello-acoustic/: README.md
sensors/hello-acoustic/src/: main.rs
sensors/hello-cbrn/: README.md
sensors/hello-ew/: Cargo.toml
sensors/hello-ew/src/: main.rs
sensors/hello-sensor/: Cargo.toml  README.md
