[workspace]
resolver = "2"
members = ["hello-*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints]
unsafe_code = "forbid"

[workspace.dependencies]
furia-sdk = { git = "https://github.com/vlordier/furia-core.git", tag = "v0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }