[workspace]
resolver = "2"
members = [
    "sensors/*",
    "entities/*",
    "intelligence/*",
    "operations/*",
    "governance/*",
    "integrations/*",
    "cuas/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = { level = "forbid" }

[workspace.dependencies]
# Use local furia-core for development (comment out and uncomment git line for releases).
furia-sdk = { path = "../furia-core/crates/furia-sdk" }
# furia-sdk = { git = "https://github.com/vlordier/furia-core.git", tag = "v0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }