[package]
name = "hello-acoustic"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing AcousticProvider — passive sonar detection"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
[lints]
workspace = true
