[package]
name = "hello-assessment"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing AssessmentEngine — battle damage assessment"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true