[package]
name = "hello-civilian"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing CivilianDensityProvider — population by region"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
[lints]
workspace = true
