[package]
name = "hello-decision-tree"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing DecisionTreeProvider — threshold classifier"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
[lints]
workspace = true
