[package]
name = "hello-decomposition"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing DecompositionStrategy — mission into sub-phases"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
[lints]
workspace = true
