[package]
name = "hello-dispatch"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing DispatchAdapter — send action to a target"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
[lints]
workspace = true
