[package]
name = "hello-fusion"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing FusionEngine — correlate sensor tracks"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
[lints]
workspace = true
