[package]
name = "hello-nato-coalition"
version.workspace = true
edition.workspace = true
description = "Example: NATO coalition operations pattern — module lifecycle and audit"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true