[package]
name = "hello-platform"
version.workspace = true
edition.workspace = true
description = "Hello World: composing providers into a platform using ProviderRegistry"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
[lints]
workspace = true
