[package]
name = "hello-terrain"
version.workspace = true
edition.workspace = true
description = "Hello World: implementing TerrainAnalyst — slope-based mobility classification"

[dependencies]
furia-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true